Добавил State Machine

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-src/main/resources/application-bot.properties
+src/main/resources/.env
 src/test/resources/data/*
 src/main/resources/data/*
 !**/src/test/**/target/
